force-app/main/default/objects/MembroEquipe__c/fields/Equipe__c.field-meta.xml
<CustomField>
    <fullName>Equipe__c</fullName>
    <label>Equipe</label>
    <referenceTo>Equipe__c</referenceTo>
    <relationshipLabel>Membros da equipe</relationshipLabel>
    <relationshipName>MembrosEquipe</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>