force-app/main/default/objects/MembroEquipe__c/fields/ExigeValidacaoCoordenador__c.field-meta.xml
<CustomField>
    <fullName>ExigeValidacaoCoordenador__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica necessidade de validação de presença do corretor pelo coordenador para recepção de novos leads.</description>
    <inlineHelpText>Indica necessidade de validação de presença do corretor pelo coordenador para recepção de novos leads.</inlineHelpText>
    <label>Exige validação do coordenador?</label>
    <type>Checkbox</type>
</CustomField>